// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with active 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium ax-button--active"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with defaultProps 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with full large 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium ax-button--full--large"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with full medium 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium ax-button--full--medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with full small 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium ax-button--full--small"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with full true 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium ax-button--full"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size circle with huge 1`] = `
<button
  className="ax-button ax-button--primary ax-button--circle-huge"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size circle with large 1`] = `
<button
  className="ax-button ax-button--primary ax-button--circle-large"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size circle with medium 1`] = `
<button
  className="ax-button ax-button--primary ax-button--circle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size circle with small 1`] = `
<button
  className="ax-button ax-button--primary ax-button--circle-small"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size rectangle with huge 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-huge"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size rectangle with large 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-large"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size rectangle with medium 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size rectangle with small 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-small"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size stadium with huge 1`] = `
<button
  className="ax-button ax-button--primary ax-button--stadium-huge"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size stadium with large 1`] = `
<button
  className="ax-button ax-button--primary ax-button--stadium-large"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size stadium with medium 1`] = `
<button
  className="ax-button ax-button--primary ax-button--stadium-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with shape with size stadium with small 1`] = `
<button
  className="ax-button ax-button--primary ax-button--stadium-small"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with style caution 1`] = `
<button
  className="ax-button ax-button--caution ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with style primary 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with style quaternary 1`] = `
<button
  className="ax-button ax-button--quaternary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with style secondary 1`] = `
<button
  className="ax-button ax-button--secondary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button renders with style tertiary 1`] = `
<button
  className="ax-button ax-button--tertiary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem Ipsum
</button>
`;

exports[`Button with ButtonIcon adds space all around if middle children 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem ipsum
  <span
    className="ax-button__icon"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M1 12.087a5.762 5.762 0 0 0 4.252-1.19 2.874 2.874 0 0 1-2.683-1.995c.176.034.356.052.541.052.262 0 .606-.035.847-.101-1.314-.264-2.214-1.424-2.214-2.816 0 .179.74.308 1.211.323-.771-.515-1.323-1.394-1.323-2.391 0-.526.119-1.02.366-1.444a8.128 8.128 0 0 0 5.909 3.001 2.877 2.877 0 0 1-.08-.654 2.87 2.87 0 0 1 4.965-1.965 5.735 5.735 0 0 0 1.823-.698 2.886 2.886 0 0 1-1.263 1.59A5.739 5.739 0 0 0 15 3.346a5.84 5.84 0 0 1-1.433 1.487c.006.123.008.247.008.372 0 3.795-2.889 8.172-8.172 8.172A8.138 8.138 0 0 1 1 12.087z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </span>
  Lorem ipsum
</button>
`;

exports[`Button with ButtonIcon adds space to end if last child 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  Lorem ipsum
  <span
    className="ax-button__icon ax-button__icon--end"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M1 12.087a5.762 5.762 0 0 0 4.252-1.19 2.874 2.874 0 0 1-2.683-1.995c.176.034.356.052.541.052.262 0 .606-.035.847-.101-1.314-.264-2.214-1.424-2.214-2.816 0 .179.74.308 1.211.323-.771-.515-1.323-1.394-1.323-2.391 0-.526.119-1.02.366-1.444a8.128 8.128 0 0 0 5.909 3.001 2.877 2.877 0 0 1-.08-.654 2.87 2.87 0 0 1 4.965-1.965 5.735 5.735 0 0 0 1.823-.698 2.886 2.886 0 0 1-1.263 1.59A5.739 5.739 0 0 0 15 3.346a5.84 5.84 0 0 1-1.433 1.487c.006.123.008.247.008.372 0 3.795-2.889 8.172-8.172 8.172A8.138 8.138 0 0 1 1 12.087z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button with ButtonIcon adds space to start if first child 1`] = `
<button
  className="ax-button ax-button--primary ax-button--rectangle-medium"
  disabled={undefined}
>
  <span
    className="ax-button__icon ax-button__icon--start"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M1 12.087a5.762 5.762 0 0 0 4.252-1.19 2.874 2.874 0 0 1-2.683-1.995c.176.034.356.052.541.052.262 0 .606-.035.847-.101-1.314-.264-2.214-1.424-2.214-2.816 0 .179.74.308 1.211.323-.771-.515-1.323-1.394-1.323-2.391 0-.526.119-1.02.366-1.444a8.128 8.128 0 0 0 5.909 3.001 2.877 2.877 0 0 1-.08-.654 2.87 2.87 0 0 1 4.965-1.965 5.735 5.735 0 0 0 1.823-.698 2.886 2.886 0 0 1-1.263 1.59A5.739 5.739 0 0 0 15 3.346a5.84 5.84 0 0 1-1.433 1.487c.006.123.008.247.008.372 0 3.795-2.889 8.172-8.172 8.172A8.138 8.138 0 0 1 1 12.087z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </span>
  Lorem ipsum
</button>
`;
